test/testFunc/func4.out
func4.rask:2:1: error: redefinition of abc()
func4.rask:1:1: error: abc() previously defined here

