test/testFunc/func4.rask
abc() -> void { }
abc() -> void { }
main() -> void { }

